# guitar

./: .env  .gitignore  README.md  agent_system.py  app.py  audio_separator.py  config.py  data_loader.py  debug_audio_path.py  equipment_data.py  gotoh_gear.doc  gotoh_gear_images.md  hotei_gear.doc  hotei_gear_images.md  package.json  packages.txt  pitch_analyzer.py  pyproject.toml  rag_system.py  requirements.txt  sqlite_patch.py  tak_gear.doc  tak_gear_images.md  test_agent_system.py  youtube_downloader.py
env/: pyvenv.cfg
