[tool.poetry]
name = "guitar-sound-app"
version = "0.1.0"
description = "Streamlit application for guitar equipment recommendation and phrase practice."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.46.0"
langchain = "^0.2.0"
langchain-google-genai = "^1.0.0"
google-generativeai = "^0.7.0"
faiss-cpu = "^1.8.0" # CPU版FAISS
streamlit-audiorec = "^0.1.3"
demucs = "^4.0.1"
librosa = "^0.10.2"
matplotlib = "^3.8.0"
yt-dlp = "^2024.04.09"
pydub = "^0.25.1" # pydubを追加
pandas = "^2.2.0" # データ操作にpandasを追加

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
